# gemmaedge

./: .example.env  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gemma_test.ipynb
.agents/: AGENTS.md
android/: jni.cpp
docs/: ARCHITECTURE.md  COLAB.md
include/gemmaedge/: attention.h  cuda_backend.h  expert_cache.h  feed_forward.h  gemma4_model.h  generation.h  gguf.h  kv_store.h  mapped_file.h  model_format.h  tensor.h  tokenizer.h  vision.h  vulkan_backend.h
scripts/: build_android.sh  build_linux.sh  colab_cli.py  colab_server.py
src/: attention.cpp  cuda_backend.cu  cuda_backend_stub.cpp  expert_cache.cpp  feed_forward.cpp  gemma4_model.cpp  generation.cpp  gguf.cpp  kv_store.cpp  main.cpp  mapped_file.cpp  model_format.cpp  tensor.cpp  tokenizer.cpp  vision.cpp  vulkan_backend.cpp
tests/: core_tests.cpp
tools/: check_special.py  download_model.py  inspect_sliding.py  inspect_tokens.py  print_chat_template.py  run_model.py
